Fixed sidebar footer overlap

--- a/app/assets/stylesheets/contest.css.scss
+++ b/app/assets/stylesheets/contest.css.scss
@@ -899,7 +899,7 @@ footer {
 	display: none;
 	z-index:0;
 	width: 205px;
-	height: 630px;
+	height: 800px;
 	margin: 15px 0;
 	background: transparent url(petSafeLogoSidebar.png) no-repeat center 95px;
 	.logo {
